@@ -1558,6 +1558,10 @@ amp</source>
         <source>Volume &amp;down</source>
         <translation>&amp;Уменьшить громкость</translation>
     </message>
+    <message>
+        <source>Suspend after playbac&amp;k is finished</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>Playlist</name>
