@@ -14,7 +14,7 @@ else: DESTDIR = ../../app/lib
 win32 {
 	LIBS += -lswscale -lswresample -lavutil -Wl,-Bstatic -lass
 	!contains(QMAKE_CXX, x86_64-w64-mingw32-g++): LIBS += -lfontconfig -lexpat
-	LIBS += -lfreetype -lfribidi -Wl,-Bdynamic -lwinmm -lshell32
+	LIBS += -lfreetype -lfribidi -Wl,-Bdynamic -lwinmm -lshell32 -lpowrprof
 }
 else {
 	macx: QT_CONFIG -= no-pkg-config
