@@ -1,4 +1,5 @@
 Changes in QMPlay2 build 16.03.03:
+	- feature - suspend the computer after playback is finished,
 	- fix slow seeking on some slow network streams,
 	- zero-copy demuxing and decoding (if possible),
 	- OpenGL 2 bugfix,
